# cmake_project

cmake_project/: .cproject  CMakeLists.txt  GPIO.h  build.bat  main.c  xmc4500.cmake
cmake_project/Libraries/Newlib/: syscalls.c
dave_project/: .cproject  .project  main.c
